Add styles for button elements in index.html
Added CSS styles for button elements.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<style>
+  button {
+    background-color: blue;
+    color: white;
+    border: none;
+    height: 36px;
+    border-radius: 18px;
+  }
+</style>
+
 <html>
 <head>
   <title>Brady's Game 😼🔥</title>
