Change button to use click-button class

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Brady's Game 😼🔥</title>
 
   <style>
-    button {
+    .click-button {
       background-color: blue;
       color: white;
       border: none;
@@ -18,7 +18,7 @@
 
 <body>
   <h1>Welcome to Brady's Game!</h1>
-  <button onclick="startGame()">Click Me</button>
+  <button class = "click-button", onclick="startGame()">Click Me</button>
   <p id="score">Score: 0</p>
 
   <script src="script.js"></script>
