--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
       border: none;
       height: 36px;
       border-radius: 18px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   </style>
 
