--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
       border: none;
       height: 36px;
       border-radius: 18px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      line-height: 36px
     }
   </style>
 
