--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Welcome to Brady's Game!</h1>
-  <button class = "click-button", onclick="startGame()">Click Me</button>
+  <button class = "click-button" onclick="startGame()">Click Me</button>
   <p id="score">Score: 0</p>
 
   <script src="script.js"></script>
